# atlas-npu

./: .gitignore  .gitmodules  .scalafmt.conf  Makefile  README.md  build.mill  build.mill.scala  build.sbt
baremetal/: Makefile  README.md  assembler.py  coverage_analyzer.py  master_wavier.el  run_asm_tests.sh  run_combo_suite.py
baremetal/agentic/: run_asm_tests.sh  verif_buddy.py
baremetal/agentic/resources/: architecture.md  baremetal_test_examples.json  isa_docs.md  optimization_menu.json  rules.json
baremetal/assembly/: alu_basic.S  branch_accel_delay_slots_dma_vpu_xlu.S  branch_delay_slots.S  branch_delay_slots_mxu1_highbank_transpose.S  branch_on_accel_result_two_path_compute.S  csr_scale.S  dma_8_channel_burst.S  dma_bank_end_edges.S  dma_compute_control_serialized_pipeline.S  dma_loopback.S  dma_lsu_stall_mixed.S  dma_mixed_direction_burst.S  dma_mixed_transfer_sizes.S  dma_overlap.S  dma_reconfig_base.S  dma_reconfig_exhaustive.S  dma_stress.S  dual_mxu_pipeline_vpu.S  index.txt  integ_bank_sweep_vpu_relu_dma.S  integ_reduction_recip_pack_branch_scalar.S  integ_xlu_multi_consumer_bank_sweep.S  jal_jalr.S  lsu_triple_overlap.S  mem_scalar.S  mreg_busy_state_rotator_cross_engine.S  mreg_cross_engine_full_rotor.S  mreg_tracker_full_sweep.S  mreg_upper_bank_sweep_cross_engine.S  mxu0_more_push_pop.S  mxu0_push_pop.S  mxu0_qk_scores.S  mxu0_single_input_tile_bf16.S  mxu0_single_output_tile_bf16.S  mxu0_single_output_tile_bf16_k96.S  mxu1_more_push_pop.S  mxu1_push_pop.S  mxu1_qk_scores.S  mxu1_quant_relu_roundtrip.S  mxu1_single_input_tile_bf16.S  (+95 more)
baremetal/assembly/saturn_atlas_cooperative/: sab_a_ecall.S  sab_a_to_high.S  sab_a_to_zero.S  sab_b.S  sab_trampoline.S  sac_reduction_sum_to_high.S  sas_4rung_2bank_arb.S  sas_8dma_rvv_vmem.S  sas_carousel_a.S  sas_carousel_b.S  sas_carousel_c.S  sas_carousel_d.S  sas_dmem_sbus_dma.S  sas_vmem_3way_arb.S  sas_vmem_dram_dual.S  saturn_atlas_pi0.S  saturn_atlas_two_phase.S  smolvla_elementwise_add_to_high.S  smolvla_matmul_mxu1_at_2000.S  smolvla_matmul_mxu1_to_high.S  smolvla_reduction_sum_at_2000.S
baremetal/combo_suite/: atlas_instruction_matrix.json  generate_baremetal_suite.py
baremetal/combo_suite/templates/: program_template.S.tpl
baremetal/generators/: gen_branch_on_accel_result_two_path_compute.py  gen_dma_8_channel_burst.py  gen_dma_bank_end_edges.py  gen_dma_compute_control_serialized_pipeline.py  gen_dma_lsu_stall_mixed.py  gen_dma_mixed_direction_burst.py  gen_dma_mixed_transfer_sizes.py  gen_dma_overlap.py  gen_dma_reconfig_base.py  gen_dma_reconfig_exhaustive.py  gen_dma_stress.py  gen_dual_mxu_pipeline_vpu.py  gen_integ_bank_sweep_vpu_relu_dma.py  gen_integ_reduction_recip_pack_branch_scalar.py  gen_integ_xlu_multi_consumer_bank_sweep.py  gen_kernel_header.py  gen_lsu_triple_overlap.py  gen_mreg_busy_state_rotator_cross_engine.py  gen_mreg_cross_engine_full_rotor.py  gen_mreg_tracker_full_sweep.py  gen_mreg_upper_bank_sweep_cross_engine.py  gen_mxu0_more_push_pop.py  gen_mxu0_push_pop.py  gen_mxu0_qk_scores.py  gen_mxu0_single_input_tile_bf16.py  gen_mxu0_single_output_tile_bf16_k96.py  gen_mxu1_more_push_pop.py  gen_mxu1_push_pop.py  gen_mxu1_qk_scores.py  gen_mxu1_quant_relu_roundtrip.py  gen_mxu1_single_input_tile_bf16.py  gen_mxu1_single_output_tile_bf16.py  gen_mxu1_single_output_tile_bf16_k96.py  gen_mxu_chain_vpu_reduce.py  gen_perf_fused_attention_mxu1.py  gen_perf_mm_dual_128x128x128.py  gen_perf_mm_mxu0_64x64x128.py  gen_perf_mm_mxu0_64x64x64.py  gen_perf_mm_mxu1_64x64x128.py  gen_perf_mm_mxu1_64x64x64.py  (+90 more)
baremetal/generators/software_models/mxu0_sa/: converters.h  fp_formats.h  params_and_requests.h  systolic_array_rtl_linear.py
baremetal/generators/software_models/mxu1_ipt/: converters.py  ipt_rtl_linear.py
baremetal/generators/software_models/mxu1_ipt/ipt_c/: ipt_linear.h  ipt_rtl_linear_c.py  params_and_requests.py
baremetal/generators/software_models/vpu/: bf16_utils.py  fp8_e4m3.py  gen_vectors.py  vector_engine_model.py  vector_params.py  vector_rtl_forward.py  vpu_op.py  vpu_vector_file.py
baremetal/generators/software_models/vpu/lane_boxes/: __init__.py  add_sub_sum_vec.py  col_add_vec.py  exp.py  fp8_pack.py  fp8_unpack.py  log.py  mov.py  mul_rec.py  pair_wise_max.py  pair_wise_min.py  rcp.py  relu.py  row_max.py  row_min.py  sin_cos_vec.py  sqrt.py  square_cube_vec.py  tanh_rec.py  vector_load_imm.py
baremetal/generators/software_models/vpu/lut_sources/: __init__.py  lut_params.py  lut_tables.py
baremetal/random_permutations/: random_gen.py  run_permute_tests.sh
baremetal/scripts/: status.sh  summary.pl
baremetal/tests/: CMakeLists.txt
chipyard/config/: AtlasConfigs.scala  WithDma.scala  WithInnerProductTrees.scala  WithSystolicArray.scala  WithVmem.scala
chipyard/src/main/scala/atlas/: Elaborate.scala
chipyard/top/: InnerProductTreesTop.scala  SystolicArrayTop.scala
scripts/: convert_exp_to_e4m3.py  gen_mxu_full_matmul.py  gen_mxu_full_matmul_vectors.py  gen_mxu_vectors.py  gen_vpu_test_vectors.py  run_vector_tests.sh
src/main/scala/atlas/: Elaborate.scala
src/main/scala/atlas/common/: AtlasParams.scala  DMAParams.scala  DmaParams.scala  InnerProductTreeParams.scala  MregParams.scala  MxuParams.scala  RegFileParams.scala  ScratchpadMem.scala  ScratchpadParams.scala  SubsystemInjector.scala  SystolicArrayParams.scala  TensorRegFile.scala  VPUParams.scala  VmemParams.scala  VpuParams.scala
src/main/scala/atlas/dma/: DmaEngine.scala
src/main/scala/atlas/ipt/: AccumulationBuffer.scala  (+5 more)
src/test/resources/: rtl_actual_outputs.txt  vpu_vectors.txt
src/test/resources/assembly/: alu_basic.S  branch_delay_slots.S  csr_scale.S  dma_loopback.S  dma_stress.S  index.txt  jal_jalr.S  mem_scalar.S  mxu0_push_pop.S  mxu0_qk_scores.S  mxu0_single_input_tile_bf16.S  mxu0_single_output_tile_bf16.S  mxu1_push_pop.S  mxu1_qk_scores.S  mxu1_single_input_tile_bf16.S  mxu1_single_output_tile_bf16.S  mxu_push_pop.S  mxu_qk_scores.S  mxu_single_input_tile_bf16.S  mxu_single_output_tile_bf16.S  scalar_isa.S  xlu_transpose.S
src/test/scala/atlas/: AtlasClusterSpec.scala
(+172 files in other folders)
